= 3.2.12 (not released yet)

= 3.2.11
- improve support for tableless models and active_scaffold_batch
- fix count includes which were broken in 3.2.9
- remove duplicated conditions in nested scaffolds, added by conditions_from_params

= 3.2.10
- fix nested scaffolds with update action disabled
- initial work for tableless support (index with limited options)
- fix scrolling on closing nested scaffolds
- fix calculations which were broken in 3.2.9

= 3.2.9
- remove duplicated conditions with constraints
- fix constraints for polymorphic associations

= 3.2.8
- add deprecation for update_column, update_columns should be used instead
- fix constraints with hide_nested_column disabled in list and embedded scaffolds which are nested too
- fix setting a hash as includes, cannot be concat in finder
- add option to scroll on close only if element is not visible in viewport (default now)
- fix create and edit singular associations without render_component
- messages go across all table
- display readonly associations in forms, it was ready to display them but it was skipping them
- Some fixes for inplace editors (cloning form overrides, ajax and radiobuttons). Add handlers for empty columns
- add wrap_tag to list so cells content can be wrapped in a tag for better styling
- fix date picker parsing for datetime fields when jquery is used
- add as:element_updated js event when replace or replace_html is called
- rescue database exceptions so you get error messages for it insted of error 500, for example in case you forgot to check uniqueness for a unique index
- add class attribute for displayed unauthorized columns in forms, so they get same styling

= 3.2.7
- restore missing update.persistent feature
- fix create.persistent
- add new record in first scaffold, not in all nested scaffolds
- fix deleting all in habtm with select_ui

= 3.2.6
- fix ordering with DISTINCT call